宅地図の表示の初期画面を石巻に変更

--- a/plugins/lgdis/config/znettown_key.yml.example
+++ b/plugins/lgdis/config/znettown_key.yml.example
@@ -3,7 +3,7 @@
 # 機能有効化設定
 # * true : 有効
 # * false: 無効
-enable: false
+enable: true
 
 # 認証情報(CGIのURL)
 # * http://lab.zapi.znet-town.net : 検証環境
@@ -24,10 +24,10 @@ uid: 11111111
 pwd: 11111111
 
 # マップ初期表示内容(緯度)
-lat: "503139470"
+lat: "138352421"
 
 # マップ初期表示内容(経度)
-lng: "128505410"
+lng: "508702556"
 
 # マップ初期表示内容(地図倍率)
 # *  2: 広域図
@@ -46,7 +46,7 @@ lng: "128505410"
 # * 15: 住宅地図
 # * 16: 住宅地図
 # * 17: 住宅地図
-zoom: 10
+zoom: 9
 
 # マップ初期表示内容(地図表示モード)
 # * 1: カラー／表札あり
