facebookの認証keyとメッセージ作成用keyを振分ける。

--- a/plugins/lgdis/config/api_key.yml
+++ b/plugins/lgdis/config/api_key.yml
@@ -2,13 +2,15 @@
 twitter:
   consumer_key: "0589uckPdTLluGRNxZpFA"
   consumer_secret: "ICf1lBDhhMBF3l5tqYspxYDGI63ooA5AsMcT0ctajtA"
-  oauth_token: "897045534-OQw3IgS2IRQQg4nXsH1R6qVtQZwU0jbvrnUXOTKp"
-  oauth_token_secret: "w8xRfds4iFPU8hsBSpRIZuREAQAUpmrG0Yj1KLeq4"
+  oauth_token: "897045534-3PRXVsOxW9OkLtmVqCP4lWr1GbDuFtCWwMwBQ1NP"
+  oauth_token_secret: "suA9cm3njVooDhgFhflFh0DK1aPRVyLIOmUwMidGfxc"
 
 # Facebook API Key
 facebook:
   app_token: "362679870488301|QajA91l689qECcenIGevONltIjo"
   user_id: "100004580826412"
+  app_id: "	499326930128968"
+  app_secret: "78bac50a1474365035b6926e029dfbd5"
 
 # OpenAM(SAML) define
 openam:
