--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -26,7 +26,7 @@ delivery_job_class:
 
 to: # 配送先メールアドレス、メーリングリスト
   - &to_err apl@localhost.localdomain # Resqueジョブエラー通知
-  - &to_1   apl@localhost.localdomain # 自治体職員向けメール（０号配備）
+  - &to_1   to1@localhost.localdomain # 自治体職員向けメール（０号配備）
   - &to_2   to2@localhost.localdomain # 自治体職員向けメール（１号配備）
   - &to_3   to3@localhost.localdomain # 自治体職員向けメール（２号配備）
   - &to_4   to4@localhost.localdomain # 自治体職員向けメール（３号配備）
@@ -204,13 +204,13 @@ delivery_place_rss: &delivery_place_rss
 #     [配信先1, 配信先2, 配信先3,配信先4
 auto_destination:
   0:  # ０号配備
-    [*smtp_0, *twitter, *facebook, *urgent_mail_docomo]
+    [*smtp_0, *twitter, *facebook]
   1:  # １号配備
-    [*smtp_1, *twitter, *facebook, *urgent_mail_docomo]
+    [*smtp_1, *twitter, *facebook]
   2:  # ２号配備
-    [*smtp_2, *twitter, *facebook, *urgent_mail_docomo]
+    [*smtp_2, *twitter, *facebook]
   3:  # ３号配備
-    [*smtp_3, *twitter, *facebook, *urgent_mail_docomo]
+    [*smtp_3, *twitter, *facebook]
 
 # 自動配信除外設定
 # JMAとJ-Alertから送信されてくる同じXMLの二重配信さけるための措置
@@ -643,18 +643,16 @@ delivery_place_default:
   1: # 【システム】避難勧告・指示
     [*commons]
   2: # 【システム】避難所開設・閉鎖
-    [*smtp_0]
+    [*commons]
   3: # 【システム】気象庁発信（その他）
-    [*commons, *smtp_0]
-  5: # 【システム】河川管理者発信（その他）
-    [*commons, *smtp_1]
-  6: # 【システム】河川管理者発信（警報・注意報）
-    [*smtp_0, *smtp_1]
-  7: # 【被害報告】人的
-    [*commons, *smtp_0, *smtp_1]
-  8: # 【被害報告】住家建物
-    [*smtp_2]
-  9: # 【被害報告】道路
+    [*smtp_0]
+  4: # 【システム】気象庁発信（警報・注意報）
+    [*smtp_0]
+  16: # 【システム】災害対策本部設置
+    [*commons]
+  18: # 【システム】被害要約（状況）
+    [*commons]
+  20: # 【広報-交通】道路交通規制に関する情報
     *delivery_place_group_all
 
 # 公共情報コモンズ配信で使用するテンプレート群
@@ -950,16 +948,17 @@ comp_info_xpath:
 commons_xml_field:
   namespace_start_tag: <body_namespace xmlns:pcx_di="http://xml.publiccommons.ne.jp/pcxml1/body/DamageInformation3" xmlns:pcx_en="http://xml.publiccommons.ne.jp/pcxml1/body/event3" xmlns:pcx_sh="http://xml.publiccommons.ne.jp/pcxml1/body/shelter3" xmlns:pcx_um="http://xml.publiccommons.ne.jp/pcxml1/body/UrgentMail3" xmlns:pcx_ev="http://xml.publiccommons.ne.jp/pcxml1/body/evacuation3" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:edxlde="urn:oasis:names:tc:emergency:EDXL:DE:1.0" xmlns:commons="http://xml.publiccommons.ne.jp/xml/edxl/" xmlns:pcxml="http://xml.publiccommons.ne.jp/pcxml1/3" xmlns:pcx_eb="http://xml.publiccommons.ne.jp/pcxml1/elementBasis3/" xmlns:pcx_ib="http://xml.publiccommons.ne.jp/pcxml1/informationBasis3/" xmlns:pcx_gi="http://xml.publiccommons.ne.jp/pcxml1/body/GeneralInformation3" xmlns:pcx_ah="http://xml.publiccommons.ne.jp/pcxml1/body/AntidisasterHeadquarter3"> # 名前空間定義
   namespace_end_tag: </body_namespace>
+  sender_id: lgdis.xxxxxxxxxx-city.test # 発信者ID
   confidential_message: UNCLASSIFIED AND NOTSENSITIVE # メッセージの機密性
   edxl_status:  # 運用種別
-    normal:   Actual   # 通常モード
+    normal:   Actual     # 通常モード
     training: Exercise # 災害訓練モード
     test:     System   # 通信試験モード
   editorial_office: ××市総務部防災対策課  # 作成部署情報(部署名)
   publishing_office: ××市総務部防災対策課 # 発表部署情報(部署名)
-  publishing_office_kana: ××しそうむぶぼうさいたいさくか # 発表部署情報(部署名かな)
+  publishing_office_kana: △△△△△しそうむぶぼうさいたいさくか # 発表部署情報(部署名かな)
   contact_type: '09012345678'               # 発表部署情報(電話番号)
-  area_address: ○○県石××市穀町１４－１    # 発表部署情報(住所)
+  area_address: ○○県××市穀町１４－１    # 発表部署情報(住所)
   office_domain: city.xxxxxxxxxx.lg.jp      # 発表部署情報(ドメイン)
   area_name: ××市                         # 事象の起きた場所
   organization_code: '042021'               # 作成部署情報(組織コード)
@@ -978,18 +977,18 @@ custom_field_delivery:
   comp_info: 5        # 補足情報
 
 # 公共情報コモンズへの発信
- # NOTE:
- # endpoint below have to point to a URL
- # where COMMONS web server process is running on.
- # In other word, IP address of non-router (including virtualizer router).
-#ie commons_endpoint: http://192.168.43.186/commons/subscriber/soap/testservice.example.com/
-#sha
+# NOTE:
+# endpoint below have to point to a URL
+# where COMMONS web server process is running on.
+# In other word, IP address of non-router (including virtualizer router).
+# ie commons_endpoint: http://XXX.XXX.XXX.XXX/commons/subscriber/soap/testservice.example.com/
+# sha
 commons_connection:
   endpoint: https://lgdis.local/commons/subscriber/soap/testservice.example.com/
   #sha centos_ssh: commons_endpoint: https://localhost:443/commons/subscriber/soap/testservice.example.com/
   username: user1@example.com
   password: password
-  wsdl: /home/rails/LGDIS/plugins/lgdis/lib/lgdis/ext_out/wsdl/MQService.wsdl
+  wsdl: /home/apl/develop/LGDIS/plugins/lgdis/lib/lgdis/ext_out/wsdl/MQService.wsdl
   namespace: http://soap.publiccommons.ne.jp/
   ssl_ca_cert: /opt/fix/SOAPdev/etc/pki/CA/cacert.pem
 
@@ -1006,7 +1005,7 @@ atom:
 disaster_portal_url: "下記リンクより、災害情報を確認して下さい。\n http://www.jice.or.jp/sinsai/sinsai_result.php"
 
 # *号配備メールに添付するLGDSF URL 設定
-lgdsf_url: "下記リンクより、位置情報、参集場所の報告を行ってください。\n http://XXX.XXX.XXX.XXX/LGDSF/staffs/send/"
+lgdsf_url: "下記リンクより、位置情報、参集場所の報告を行ってください。\n http://XXX.XXX.XXX.XXX/staffs/send/"
 
 # 外部出力
 ext_out:
