fix .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /config/configuration.yml
 /config/database.yml
 /config/email.yml
+/config/unicorn.rb
 /config/initializers/session_store.rb
 /config/initializers/secret_token.rb
 /coverage
@@ -32,6 +33,9 @@
 /plugins/lgdis/config/settings.yml
 /plugins/lgdis/config/custom_field_connection.yml
 /plugins/lgdis/config/destination_list.yml
+/plugins/lgdis/config/api_key.yml
+/plugins/lgdis/config/evacuation_advisory.yml
+/plugins/lgdis/config/znettown_key.yml
 *.rbc
 
 /.bundle
