fix ATOM feed path.

--- a/plugins/lgdis/config/destination_list.yml.example
+++ b/plugins/lgdis/config/destination_list.yml.example
@@ -1324,7 +1324,7 @@ commons_connection:
 # Atom出力先設定
 atom:
   # 出力ディレクトリ名
-  output_dir: ./public/atom
+  output_dir: ./public/plugin_assets/lgdis/atom
   # 出力ファイル名
   # ※文字列中の「${trackerid}」は該当のトラッカーIDに、「${date}」は作成年月日時分秒(YYYYMMDDHHMMSS)に置換されます
   output_filename: "track_${trackerid}.rss"
