--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 /tmp/thumbnails/*
 /vendor/cache
 /vendor/rails
+/vendor/bundle
 /plugins/lgdis/config/settings.yml
 /plugins/lgdis/config/custom_field_connection.yml
 /plugins/lgdis/config/destination_list.yml
