--- a/plugins/lgdis/Gemfile
+++ b/plugins/lgdis/Gemfile
@@ -79,6 +79,9 @@ gem 'exifr'
 #  gem "iconv"
 #end
 
+# Use unicorn as the app server. LGDPF default Rack HTTP Server.
+gem 'unicorn'
+
 group :development, :test do
   # Rspec-2 meta-gem that depends on the other components.
   gem 'rspec'
