fix facebook ext_out system, see api.key.example.

--- a/plugins/lgdis/config/api_key.yml.example
+++ b/plugins/lgdis/config/api_key.yml.example
@@ -7,11 +7,11 @@ twitter:
 
 # Facebook API Key
 facebook:
-  app_token: ""
-  user_id: ""
+  fb_app_to_fb_page_access_token: ""
+  fb_page_id: ""
   app_id: ""
   app_secret: ""
-  page_id: ""
+  user_id: ""
 
 # OpenAM(SAML) define
 openam:
