--- a/plugins/lgdis/Gemfile
+++ b/plugins/lgdis/Gemfile
@@ -1,23 +1,23 @@
 # ActiveRecord extension to get more from PostgreSQL.
-gem 'pg_power'
+gem 'pg_power', '1.6.0'
 
 # acts_as_paranoid is Active Record (~>3.2) plugin which allows you to
 # hide and restore records without actually deleting them.
-gem 'acts_as_paranoid'
+gem 'acts_as_paranoid', '0.4.2'
 
 # oauth is a RubyGem for implementing both OAuth clients and servers in Ruby applications.
-gem 'oauth'
+gem 'oauth', '0.4.7'
 
 # twitter is a Ruby interface to the Twitter API.
-gem 'twitter'
+gem 'twitter', '4.8.1'
 
 # Koala is a Facebook library for Ruby, supporting the Graph API (including the batch requests and photo uploads),
 # the REST API, realtime updates, test users, and OAuth validation.
-gem 'koala'
+gem 'koala', '1.6.0'
 
 # Nokogiri (鋸) is an HTML, XML, SAX, and Reader parser.
 # Among Nokogiri’s many features is the ability to search documents via XPath or CSS3 selectors.
-gem 'nokogiri'
+gem 'nokogiri', '1.6.0'
 
 # Resque is a Redis-backed Ruby library for creating background jobs,
 # placing those jobs on multiple queues, and processing them later.
@@ -25,53 +25,53 @@ gem 'resque', '1.23.1', :require => 'resque/server'
 
 # Light weight job scheduling on top of Resque. Adds methods enqueue_at/enqueue_in to schedule jobs in the future.
 # Also supports queueing jobs on a fixed, cron-like schedule.
-gem 'resque-scheduler'
+gem 'resque-scheduler', '2.0.1'
 
 # meta_search is Allows simple search forms to be created against an AR3
 # model and its associations, has useful view helpers for sort links and
 # multiparameter fields as well.
-gem 'meta_search'
+gem 'meta_search', '1.1.3'
 
 # will_paginate provides a simple API for performing paginated queries with
 # Active Record, DataMapper and Sequel, and includes helpers for rendering
 #  pagination links in Rails, Sinatra and Merb web apps.
-gem 'will_paginate'
+gem 'will_paginate', '3.0.4'
 
 # Ruby 1.9.2 compatible soap4r library
-gem 'soap4r-ruby1.9'
+gem 'soap4r-ruby1.9', '2.0.5'
 
 # Delicious SOAP for the Ruby community
-gem 'savon'
+gem 'savon', '2.2.0'
 
 # A simple universally unique ID generation library.
-gem 'uuidtools'
+gem 'uuidtools', '2.1.4'
 
 # A generalized Rack framework for multiple-provider authentication.
-gem 'omniauth'
+gem 'omniauth', '1.1.4'
 
 # OpenID strategy for OmniAuth. Using for Google.
-gem 'omniauth-openid'
+gem 'omniauth-openid', '1.0.1'
 
 # A generic OAuth (1.0/1.0a) strategy for OmniAuth.
-gem 'omniauth-oauth'
+gem 'omniauth-oauth', '1.0.1'
 
 # An abstract OAuth2 strategy for OmniAuth. Using for Facebook.
-gem 'omniauth-oauth2'
+gem 'omniauth-oauth2', '1.1.1'
 
 # A generic SAML strategy for OmniAuth.
-gem 'omniauth-saml', :git => 'https://github.com/ruvr/omniauth-saml.git'
+gem 'omniauth-saml', '1.0.0', :git => 'https://github.com/ruvr/omniauth-saml.git'
 
 # OmniAuth strategy for Twitter.
-gem 'omniauth-twitter'
+gem 'omniauth-twitter', '1.0.0'
 
 # Facebook strategy for OmniAuth.
-gem 'omniauth-facebook'
+gem 'omniauth-facebook', '1.4.1'
 
 # jpmobile is Rails plugin for Japanese mobile-phones.
-gem 'jpmobile'
+gem 'jpmobile', '3.0.7'
 
 # EXIF Reader is a module to read metadata from JPEG and TIFF images.
-gem 'exifr'
+gem 'exifr', '1.1.3'
 
 # Iconv is a wrapper class for the UNIX 95 iconv() function family,
 # which translates string between various encoding systems.
@@ -80,19 +80,29 @@ gem 'exifr'
 #end
 
 # Use unicorn as the app server. LGDPF default Rack HTTP Server.
-gem 'unicorn'
+gem 'unicorn', '4.6.3'
+
+# Rack provides a minimal, modular and adaptable interface for developing web applications in Ruby.
+# By wrapping HTTP requests and responses in the simplest way possible, 
+# it unifies and distills the API for web servers, web frameworks, and software in between (the so-called middleware) into a single method call. 
+# Also see http://rack.github.com/.'
+gem 'rack', '1.4.5'
+
+# Rake is a Make-like program implemented in Ruby. 
+# Tasks and dependencies arespecified in standard Ruby syntax.
+gem 'rake', '10.1.0'
 
 group :development, :test do
   # Rspec-2 meta-gem that depends on the other components.
-  gem 'rspec'
+  gem 'rspec', '2.13.0'
 
   # rspec-rails 2 is a testing framework for Rails 3.x and 4.x. 
-  gem 'rspec-rails'
+  gem 'rspec-rails', '2.13.2'
 
   # factory_girl is a fixtures replacement with a straightforward
   # definition syntax, support for multiple build strategies (saved
   # instances, unsaved instances, attribute hashes, and stubbed objects),
   # and support for multiple factories for the same class (user,
   # admin_user, and so on), including factory inheritance.
-  gem 'factory_girl_rails'
+  gem 'factory_girl_rails', '4.2.1'
 end
