--- a/plugins/lgdis/config/init_proj.yml
+++ b/plugins/lgdis/config/init_proj.yml
@@ -1,13 +1,31 @@
 project_member:
  -
   principal: group
-  id: 5
-  role_ids:
-   - 3
-   - 4
- -
-  principal: user
   id: 3
   role_ids:
-   - 4
+   - 6
+ -
+  principal: group
+  id: 4
+  role_ids:
+   - 7
+ -
+  principal: group
+  id: 5
+  role_ids:
    - 5
+ -
+  principal: group
+  id: 6
+  role_ids:
+   - 8
+ -
+  principal: group
+  id: 7
+  role_ids:
+   - 9
+ -
+  principal: user
+  id: 1
+  role_ids:
+   - 3
